2003-01-07 10:53  chris

	* COPYRIGHT, Cache.pm, MANIFEST, README, test.pl: v0.21: prep for
	release * Add save method to make it easier to subclass * Add lots
	of documentation * Add apologies in the lame test script

2002-06-10 16:38  tasc

	* Cache.pm: Change all class methods to require PACKAGE->method()
	syntax.  Bumped version

2002-06-07 15:24  tasc

	* Cache.pm: Change default column names Trivial code formatting
	fixes

2002-06-06 16:01  tasc

	* Makefile.PL: Fix CAM::Template number

2002-06-06 15:57  tasc

	* Cache.pm: Fix bug (called toString instead of toStringCache)
	Added some diagnostics

2002-06-06 15:40  tasc

	* Cache.pm: Allow more arguments to new() to go to SUPER::new() Fix
	doc typo

2002-06-06 15:29  tasc

	* Cache.pm: Fix timestamp comparison bug

2002-06-06 15:20  chris

	* Makefile.PL, Makefile.PL: set dependency

2002-06-06 15:19  tasc

	* Cache.pm: Bug fixes

2002-06-06 14:54  chris

	* Cache.pm: Fix typos

2002-06-06 14:51  chris

	* Makefile: Oops, didn't mean to import this

2002-06-06 14:50  chris

	* Cache.pm, MANIFEST, Makefile, Makefile.PL, test.pl: initial
	import

2002-06-06 14:50  chris

	* Cache.pm, MANIFEST, Makefile, Makefile.PL, test.pl: Initial
	revision
