@@ -1,3 +1,8 @@
+2003-01-17 10:57  chris
+
+	* Cache.pm: Make the template still work if there is not cachekey
+	specified
+
 2003-01-07 10:53  chris
 
 	* COPYRIGHT, Cache.pm, MANIFEST, README, test.pl: v0.21: prep for
